cite/test/tests/ui/fail/http_invalid_syntax.stderr
error: invalid http syntax - requires 'url = "..."' and one of 'pattern = "..."', 'selector = "..."', or 'match_type = "full"'
 --> tests/ui/fail/http_invalid_syntax.rs:6:1
  |
6 | #[cite(http, selector = "h1")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `cite` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0425]: cannot find function `test_missing_url` in this scope
  --> tests/ui/fail/http_invalid_syntax.rs:12:5
   |
12 |     test_missing_url();
   |     ^^^^^^^^^^^^^^^^ not found in this scope
